tests/negative/test_decl_arr_cn_elems_not_init.orb
fnc main() {
    let i32 cn[4] arr;
}